base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Si vous avez cert-manager
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.k8s-dev.heyyel.paas.jedikubes.com
    secretName: demo-app-tls
  rules:
  - host: demo.k8s-dev.heyyel.paas.jedikubes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 80
